--- a/tensorflow/notebooks/Serving/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
+++ b/tensorflow/notebooks/Serving/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
@@ -28,9 +28,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>47</td><td>application_1558113321244_0049</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1558113321244_0049/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1558113321244_0049_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.datasets import load_iris\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -242,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -478,12 +506,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once all the files have been exported to the model directory, we can create a serving instance that points to the model files using `serving.create_or_update_serving()`"
+    "Once all the files have been exported to the model directory, we can create a serving instance that points to the model files using `serving.create_or_update()`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -505,20 +533,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To update an existing serving, set the argument `update=True` in `serving.create_or_update_serving`. To delete an existing serving, call `serving.delete_serving()`. "
+    "To update an existing serving, set the argument `update=True` in `serving.create_or_update()`. To delete an existing serving, call `serving.delete()`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting serving with name: IrisFlowerClassifier...\n",
-      "Serving with name: IrisFlowerClassifier successfully deleted\n",
+      "No serving with name IrisFlowerClassifier was found in the project demo_deep_learning_admin000\n",
       "Creating a serving for model IrisFlowerClassifier ...\n",
       "Serving for model IrisFlowerClassifier successfully created"
      ]
@@ -527,8 +554,8 @@
    "source": [
     "script_path = \"Models/\" + SERVING_NAME + \"/\" + str(SERVING_VERSION) + \"/iris_flower_classifier.py\"\n",
     "if serving.exists(SERVING_NAME):\n",
-    "    serving.delete_serving(SERVING_NAME)\n",
-    "serving.create_or_update_serving(script_path, SERVING_NAME, serving_type=\"SKLEARN\", \n",
+    "    serving.delete(SERVING_NAME)\n",
+    "serving.create_or_update(script_path, SERVING_NAME, serving_type=\"SKLEARN\", \n",
     "                                 model_version=SERVING_VERSION)"
    ]
   },
@@ -550,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -562,30 +589,30 @@
     }
    ],
    "source": [
-    "for s in serving.get_servings():\n",
+    "for s in serving.get_all():\n",
     "    print(s.name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69"
+      "76"
      ]
     }
    ],
    "source": [
-    "serving.get_serving_id(SERVING_NAME)"
+    "serving.get_id(SERVING_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -597,12 +624,12 @@
     }
    ],
    "source": [
-    "serving.get_serving_artifact_path(SERVING_NAME)"
+    "serving.get_artifact_path(SERVING_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -614,12 +641,12 @@
     }
    ],
    "source": [
-    "serving.get_serving_type(SERVING_NAME)"
+    "serving.get_type(SERVING_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -631,29 +658,29 @@
     }
    ],
    "source": [
-    "serving.get_serving_version(SERVING_NAME)"
+    "serving.get_version(SERVING_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "u'IrisFlowerClassifier-inf5643'"
+      "u'IrisFlowerClassifier-inf1491'"
      ]
     }
    ],
    "source": [
-    "serving.get_serving_kafka_topic(SERVING_NAME)"
+    "serving.get_kafka_topic(SERVING_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +692,7 @@
     }
    ],
    "source": [
-    "serving.get_serving_status(SERVING_NAME)"
+    "serving.get_status(SERVING_NAME)"
    ]
   },
   {
@@ -677,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -690,12 +717,12 @@
     }
    ],
    "source": [
-    "serving.start_serving(SERVING_NAME)"
+    "serving.start(SERVING_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -708,12 +735,12 @@
     }
    ],
    "source": [
-    "serving.stop_serving(SERVING_NAME)"
+    "serving.stop(SERVING_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +753,7 @@
     }
    ],
    "source": [
-    "serving.start_serving(SERVING_NAME)"
+    "serving.start(SERVING_NAME)"
    ]
   },
   {
@@ -745,11 +772,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOPIC_NAME = serving.get_serving_kafka_topic(SERVING_NAME)\n",
+    "TOPIC_NAME = serving.get_kafka_topic(SERVING_NAME)\n",
     "NUM_FEATURES = 4"
    ]
   },
@@ -762,33 +789,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{u'prediction': [0]}\n",
-      "{u'prediction': [1]}\n",
-      "{u'prediction': [1]}\n",
-      "{u'prediction': [0]}\n",
-      "{u'prediction': [0]}\n",
-      "{u'prediction': [0]}\n",
-      "{u'prediction': [0]}\n",
-      "{u'prediction': [1]}\n",
-      "{u'prediction': [0]}\n",
-      "{u'prediction': [1]}\n",
-      "{u'prediction': [0]}\n",
-      "{u'prediction': [1]}\n",
-      "{u'prediction': [0]}\n",
-      "{u'prediction': [0]}\n",
-      "{u'prediction': [0]}\n",
-      "{u'prediction': [0]}\n",
-      "{u'prediction': [0]}\n",
-      "{u'prediction': [2]}\n",
-      "{u'prediction': [2]}\n",
-      "{u'prediction': [2]}"
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [2]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [1]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [1]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [2]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [2]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [0]}\n",
+      "{u'predictions': [0]}"
      ]
     }
    ],
@@ -817,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -880,52 +907,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558525340892,\n",
-      "request: {\"inputs\": [[5.516942969094827, 1.647411567564031, 7.768512063863651, 1.6844369784445559]]},\n",
+      "timeout.. no more messages to read from topic\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610862667,\n",
+      "request: {\"inputs\": [[5.239064231541053, 5.208689457051675, 4.0032996032099835, 3.5415029636560016]]},\n",
       "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
       "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558525341076,\n",
-      "request: {\"inputs\": [[4.290211433795861, 3.8727314203845404, 2.838052902655436, 2.8414010549028363]]},\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610862803,\n",
+      "request: {\"inputs\": [[5.158378226477915, 3.353098139778006, 1.3150042985041994, 2.3350539825590473]]},\n",
+      "prediction:2, prediction_label:Setosa, http_response_code: 200, serving_type: SKLEARN\n",
+      "\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610862896,\n",
+      "request: {\"inputs\": [[6.8126468118572205, 3.6141109766819213, 5.751793210288437, 2.435036196107494]]},\n",
+      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
+      "\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610862986,\n",
+      "request: {\"inputs\": [[4.527984994064239, 2.7237603896779286, 7.0247987634369125, 3.774832928527622]]},\n",
+      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
+      "\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610863071,\n",
+      "request: {\"inputs\": [[1.7749936203794587, 1.7566918117239831, 6.792108183991934, 5.190253670922236]]},\n",
+      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
+      "\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610863165,\n",
+      "request: {\"inputs\": [[4.247634877118967, 5.249628239586993, 2.457034462224111, 5.038997108428068]]},\n",
       "prediction:1, prediction_label:Versicolor, http_response_code: 200, serving_type: SKLEARN\n",
       "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558525341212,\n",
-      "request: {\"inputs\": [[3.1248868186623557, 6.697655919964971, 6.36363544507187, 1.0023281449504466]]},\n",
-      "prediction:1, prediction_label:Versicolor, http_response_code: 200, serving_type: SKLEARN\n",
-      "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558525341322,\n",
-      "request: {\"inputs\": [[7.030355043130165, 2.6132204133908736, 4.722135048635029, 2.9001376110137254]]},\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610863303,\n",
+      "request: {\"inputs\": [[5.825768573944618, 4.123731386988567, 1.745489722527176, 6.163092758197717]]},\n",
       "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
       "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558525341449,\n",
-      "request: {\"inputs\": [[1.8568886913028617, 3.4011757752013296, 4.676621296291996, 5.8385429647570355]]},\n",
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610863388,\n",
+      "request: {\"inputs\": [[5.081606728910398, 2.459379313349036, 2.8974283777549474, 6.061801232878223]]},\n",
       "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
       "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558525341646,\n",
-      "request: {\"inputs\": [[5.888996950393718, 1.8899901443703735, 3.498529673894675, 7.003169832242872]]},\n",
-      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
-      "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558525341752,\n",
-      "request: {\"inputs\": [[6.639046026937113, 4.755063079938449, 6.126863036770761, 1.6743007060305035]]},\n",
-      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
-      "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558525341870,\n",
-      "request: {\"inputs\": [[1.8773870629780733, 2.8278945273137195, 3.5434416191773237, 3.7510802829982457]]},\n",
-      "prediction:1, prediction_label:Versicolor, http_response_code: 200, serving_type: SKLEARN\n",
-      "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558525342003,\n",
-      "request: {\"inputs\": [[3.9086551461247447, 5.439328903943559, 6.790852523340379, 6.351124671808777]]},\n",
-      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN\n",
-      "\n",
-      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558525342111,\n",
-      "request: {\"inputs\": [[7.28447695968265, 6.4494475533497, 3.8611260579992335, 2.4170305145967967]]},\n",
-      "prediction:1, prediction_label:Versicolor, http_response_code: 200, serving_type: SKLEARN"
+      "serving: IrisFlowerClassifier, version: 1, timestamp: 1558610863499,\n",
+      "request: {\"inputs\": [[5.349813691946242, 2.23741770182624, 4.488386071921785, 6.458211557597765]]},\n",
+      "prediction:0, prediction_label:Virginica, http_response_code: 200, serving_type: SKLEARN"
      ]
     }
    ],
