--- a/tensorflow/notebooks/Serving/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
+++ b/tensorflow/notebooks/Serving/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
@@ -79,7 +79,8 @@
     "import urllib3\n",
     "urllib3.disable_warnings(urllib3.exceptions.InsecureRequestWarning)\n",
     "from ast import literal_eval\n",
-    "from io import BytesIO"
+    "from io import BytesIO\n",
+    "import time"
    ]
   },
   {
@@ -722,6 +723,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(5) # Let the serving startup correctly"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -740,6 +750,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(5) # Let the serving stop and cleanup correctly"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
@@ -754,6 +773,15 @@
    ],
    "source": [
     "serving.start(SERVING_NAME)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.sleep(10) # Let the serving startup correctly before sending inference requests"
    ]
   },
   {
