--- a/tensorflow/notebooks/Serving/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
+++ b/tensorflow/notebooks/Serving/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
@@ -16,7 +16,9 @@
     "6. Save the trained model to HopsFS\n",
     "7. Launch a serving instance to serve the trained model\n",
     "8. Send some prediction requests to the served model\n",
-    "9. Monitor the predictions through Kafka"
+    "9. Monitor the predictions through Kafka\n",
+    "\n",
+    "**The kafka parts of this notebook have only been tested with python 2.7**"
    ]
   },
   {
@@ -42,7 +44,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>47</td><td>application_1558113321244_0049</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1558113321244_0049/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1558113321244_0049_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>3</td><td>application_1559583245312_0004</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1559583245312_0004/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks1.logicalclocks.com:8042/node/containerlogs/container_e01_1559583245312_0004_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -60,27 +62,16 @@
     }
    ],
    "source": [
-    "from sklearn.datasets import load_iris\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.externals import joblib\n",
-    "from hops import hdfs, featurestore, serving\n",
+    "import joblib\n",
     "from pyspark.ml.feature import StringIndexer\n",
     "from pyspark.sql.types import IntegerType\n",
     "import numpy as np\n",
-    "import requests\n",
     "import time\n",
     "import json\n",
-    "from hops import kafka, tls, hdfs, constants, util, featurestore, serving\n",
-    "from confluent_kafka import Producer, Consumer\n",
-    "from confluent_kafka import Consumer, KafkaError\n",
-    "from avro.io import DatumReader, BinaryDecoder\n",
-    "import avro.schema\n",
-    "import random\n",
-    "import urllib3\n",
-    "urllib3.disable_warnings(urllib3.exceptions.InsecureRequestWarning)\n",
-    "from ast import literal_eval\n",
-    "from io import BytesIO\n",
-    "import time"
+    "from hops import kafka, hdfs, featurestore, serving\n",
+    "from confluent_kafka import Producer, Consumer, KafkaError\n",
+    "import random"
    ]
   },
   {
@@ -342,8 +333,8 @@
      "output_type": "stream",
      "text": [
       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-      "           metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
-      "           weights='uniform')"
+      "                     metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
+      "                     weights='uniform')"
      ]
     }
    ],
@@ -368,7 +359,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started copying local path iris_knn.pkl to hdfs path hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Resources/iris_knn.pkl\n",
+      "Started copying local path iris_knn.pkl to hdfs path hdfs://192.168.76.101:8020/Projects/demo_deep_learning_admin000/Resources/iris_knn.pkl\n",
       "\n",
       "Finished copying"
      ]
@@ -388,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,14 +400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "u'hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/'"
+      "'hdfs://192.168.76.101:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/'"
      ]
     }
    ],
@@ -487,14 +478,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "u'hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/'"
+      "'hdfs://192.168.76.101:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/'"
      ]
     }
    ],
@@ -512,16 +503,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1\n",
-      "hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/iris_flower_classifier.py\n",
-      "hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/iris_knn.pkl"
+      "hdfs://192.168.76.101:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1\n",
+      "hdfs://192.168.76.101:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/iris_flower_classifier.py\n",
+      "hdfs://192.168.76.101:8020/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/iris_knn.pkl"
      ]
     }
    ],
@@ -539,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -596,14 +587,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "76"
+      "1"
      ]
     }
    ],
@@ -613,14 +604,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "u'/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/iris_flower_classifier.py'"
+      "'/Projects/demo_deep_learning_admin000/Models/IrisFlowerClassifier/1/iris_flower_classifier.py'"
      ]
     }
    ],
@@ -630,14 +621,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "u'SKLEARN'"
+      "'SKLEARN'"
      ]
     }
    ],
@@ -647,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -664,14 +655,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "u'IrisFlowerClassifier-inf1491'"
+      "'IrisFlowerClassifier-inf9315'"
      ]
     }
    ],
@@ -681,14 +672,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "u'Stopped'"
+      "'Stopped'"
      ]
     }
    ],
@@ -705,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,33 +808,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [2]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [1]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [1]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [2]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [2]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [0]}\n",
-      "{u'predictions': [0]}"
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [2]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}\n",
+      "{'predictions': [0]}"
      ]
     }
    ],
@@ -860,7 +851,9 @@
    "source": [
     "### Monitor Prediction Requests and Responses using Kafka\n",
     "\n",
-    "All prediction requestst are automatically logged to Kafka which means that you can keep track for yourr model's performance and its predictions in a scalable manner."
+    "All prediction requestst are automatically logged to Kafka which means that you can keep track for yourr model's performance and its predictions in a scalable manner.\n",
+    "\n",
+    "**Note**: The code below (in particular the avro parsing) have only been tested on Python 2.7"
    ]
   },
   {
