--- a/tensorflow/notebooks/Serving/tensorflow/serving_client.ipynb
+++ b/tensorflow/notebooks/Serving/tensorflow/serving_client.ipynb
@@ -4,11 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple TensorFlow Serving python client\n",
-    "---\n",
+    "# Simple TensorFlow Serving gRPC Python client\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.10</h3></font>\n",
-    "<font color='red'> <h3>Tested with Python 2.7 - TensorFlow Serving does not officially support Python3.x</h3></font>"
+    "There are two options for seding inference requests to models being served on Hopsworks:\n",
+    "\n",
+    "- Using gRPC directly to the Tensorflow Serving Server (as is illustrated in this notebook)\n",
+    "- Using Hopsworks REST API (Recommended approach) that will relay the inference requests to the serving instance in a scalable manner, providing inference logs in Kafka and authorization.\n"
    ]
   },
   {
@@ -149,21 +150,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python-demo_tensorflow_admin000__meb10000",
+   "display_name": "python-demo_deep_learning_admin000__meb10000",
    "language": "python",
-   "name": "python-demo_tensorflow_admin000__meb10000"
+   "name": "python-demo_deep_learning_admin000__meb10000"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
